# daniel-daily

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt  wsgi.py
config/: analysis.yaml  settings.yaml  sources.yaml
src/analysis/: __init__.py  brief_generator.py
src/analysis/llm/: __init__.py  anthropic_provider.py  base_provider.py
src/collection/: __init__.py  coordinator.py
src/collection/fetchers/: __init__.py  base_fetcher.py  rss_fetcher.py
src/curation/: __init__.py  source_registry.py  types.py
src/state/: __init__.py  source_state.py
src/storage/: __init__.py  deduplicator.py  markdown_store.py
src/ui/: server.py
src/ui/static/css/: style.css
src/ui/static/js/: app.js
src/ui/templates/: archive.html  base.html  brief.html
